added some lorem text on index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cloned repo</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia beatae 
+        autem saepe ab, quam tempora. Magni, repellat. Mollitia nisi sequi, 
+        enim autem, est minus deserunt odit exercitationem veritatis omnis hic.</h1>
 </body>
 </html>
